[880, 953, 954, 956]: Fix listing modal bugs (#959)
* fix: default price at 0; console errors

* chore: remove unused useEffect

* feat(listing-modal): protocol fee tooltip

* fix(listing-modal): change label of the price in summary step

* fix(listing-modal): price step field growing when price usd is too big

* fix(listing-modal): allow empty field price field on rent price step

* fix: nesting div in p error

* deps: update caniuse-lite module

* fix(wallet): make metamask default wallet connection method instead of coinbase

--- a/src/modules/land-works/components/land-works-input/s.module.scss
+++ b/src/modules/land-works/components/land-works-input/s.module.scss
@@ -30,8 +30,18 @@
   background: none;
   border: none;
   padding: 16px;
+  min-width: 0;
   max-width: 140px;
-  color: var(--theme-light-color),
+  font-family: inherit;
+  color: var(--theme-light-color);
+}
+
+.input::placeholder {
+  color: var(--theme-grey700-color);
+}
+
+.input:focus::placeholder {
+  color: transparent;
 }
 
 .dropdownBox {
